--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "express": "^4.17.3",
-    "handlebars": "^4.7.7",
+    "express-handlebars": "^6.0.3",
     "nodemon": "^2.0.15"
   },
   "name": "geo-goatr",
